# rdf

./: .gitignore  Dockerfile  main.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
test/: test_function.py
