[project]
name = "spklrdf"
dynamic = ['version']
description = "convert speckle to rdf graph models"
authors = [
    {name = "Majid alDosari", email="majid.aldosari@pnnl.gov"},
    {name = "Majid alDosari", email="majid.aldosari@pnnl.gov"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytqshacl",  # install java separately
    "specklepy",  # just for speckle_automate
    "json2rdf",
    # to get data
    'requests',
    ]

[dependency-groups]
dev = [
    "ipython", "ipdb",      # generic
    'pytqshacl[cli, java]', # see above note
    "fire",                 # tasks running
    'pre-commit',           # tasks running automation
    ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.version]
path = "src/spklrdf/__init__.py"
[tool.hatch.build.targets.sdist]
include = [
    'src/**/*.py',
    ]
